k8s/ticket-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: microservices
spec:
  selector:
    app: ticket-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
